--- a/H2S.ipynb
+++ b/H2S.ipynb
@@ -248,126 +248,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[('Warmer_seas', 0.7572243809700012),\n",
-       " ('Atlantic_Multidecadal_Oscillation_AMO', 0.7198802828788757),\n",
-       " ('poleward_shift', 0.7177090644836426),\n",
-       " ('atmospheric_CO2_levels', 0.7107298374176025),\n",
-       " ('climatic_variability', 0.7052105069160461),\n",
-       " ('oceanic_circulation', 0.6990755200386047),\n",
-       " ('called_Abydosaurus_mcintoshi', 0.6968605518341064),\n",
-       " ('Warmer_harvests', 0.6918387413024902),\n",
-       " ('Warmer_oceans', 0.689514696598053),\n",
-       " ('Jellyfish_swarm_northward', 0.686876654624939)]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "most describing words for cluster 0 is:\n",
+      "Warmer_seas\n",
+      "Atlantic_Multidecadal_Oscillation_AMO\n",
+      "poleward_shift\n",
+      "atmospheric_CO2_levels\n",
+      "\n",
+      "most describing words for cluster 1 is:\n",
+      "Atlantic_Multidecadal_Oscillation_AMO\n",
+      "atmospheric_CO2_levels\n",
+      "FAR_WEST_TEXAS\n",
+      "mso_font_pitch\n",
+      "\n",
+      "most describing words for cluster 2 is:\n",
+      "CarbonSMART_™_enterprise\n",
+      "atmospheric_CO2_levels\n",
+      "sulphate_aerosols\n",
+      "anthropogenic_carbon_dioxide\n",
+      "\n",
+      "most describing words for cluster 3 is:\n",
+      "By_Laurelle_Gilbert\n",
+      "Bob_Ewegen_deputy\n",
+      "By_Kat_Zeman\n",
+      "By_Jonas_Elmerraji\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "embed_map.most_similar(positive=[clus_0[0]])"
+    "for i in range(len(clus_0)):\n",
+    "    print(\"most describing words for cluster\",i, \"is:\")\n",
+    "    for j in range(4):\n",
+    "        print(embed_map.most_similar(positive=[clus_0[i]])[j][0])\n",
+    "    print()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('Atlantic_Multidecadal_Oscillation_AMO', 0.7156540751457214),\n",
-       " ('atmospheric_CO2_levels', 0.7041442394256592),\n",
-       " ('FAR_WEST_TEXAS', 0.7001354098320007),\n",
-       " ('mso_font_pitch', 0.6903090476989746),\n",
-       " ('Warmer_seas', 0.6877490282058716),\n",
-       " ('Antarctic_stratosphere', 0.6865097880363464),\n",
-       " ('Vertical_wind_shear', 0.6841302514076233),\n",
-       " ('climatic_variability', 0.6798188090324402),\n",
-       " ('interannual', 0.6776994466781616),\n",
-       " ('poleward_shift', 0.6776773929595947)]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "embed_map.most_similar(positive=[clus_0[1]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('CarbonSMART_™_enterprise', 0.7502768039703369),\n",
-       " ('atmospheric_CO2_levels', 0.7362477779388428),\n",
-       " ('sulphate_aerosols', 0.7319340109825134),\n",
-       " ('anthropogenic_carbon_dioxide', 0.7153979539871216),\n",
-       " ('carbon_dioxide_CO_²', 0.7085928916931152),\n",
-       " ('terrestrial_biosphere', 0.6979320049285889),\n",
-       " ('GHG_concentrations', 0.6891335248947144),\n",
-       " ('Antarctic_stratosphere', 0.6820710897445679),\n",
-       " ('Carbon_dioxide_CO2', 0.6814360618591309),\n",
-       " ('Greenhouse_gases_trap', 0.6802898645401001)]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "embed_map.most_similar(positive=[clus_0[2]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('By_Laurelle_Gilbert', 0.6576451063156128),\n",
-       " ('Bob_Ewegen_deputy', 0.6547286510467529),\n",
-       " ('By_Kat_Zeman', 0.6474968791007996),\n",
-       " ('By_Jonas_Elmerraji', 0.6473667621612549),\n",
-       " ('By_Bill_Esbrook', 0.6459450721740723),\n",
-       " ('JIM_HAND_covers', 0.6425351500511169),\n",
-       " ('Linda_Seebach', 0.6416075825691223),\n",
-       " ('By_Lisa_Shidler', 0.6405673027038574),\n",
-       " ('visit_TimesWatch', 0.637122392654419),\n",
-       " ('MUSSO_JT_c', 0.6349285840988159)]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "embed_map.most_similar(positive=[clus_0[3]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
